--- a/cus/_template/pl/fe/matter/signin/basic/success.html
+++ b/cus/_template/pl/fe/matter/signin/basic/success.html
@@ -10,7 +10,7 @@ $schema = $def->schema;
     <div>{{Record.current.data.<?php echo $schema->id?>}}</div>
     <?php } else if (in_array($schema->type,['_enrollAt'])) { ?>
     <div>{{Record.current.enroll_at*1000|date:'yy-MM-dd HH:mm'}}</div>
-    <?php } else if (in_array($schema->type,['single','phase'])) { ?>
+    <?php } else if ($schema->type==='single') { ?>
     <div>{{value2Label("<?php echo $schema->id;?>")}}</div>
     <?php } ?>
 </div>
