--- a/cus/_template/pl/fe/matter/signin/basic/signin.html
+++ b/cus/_template/pl/fe/matter/signin/basic/signin.html
@@ -4,21 +4,21 @@ $schema = $def->schema;
 ?>
 <?php if (in_array($schema->type,['shorttext'])) { ?>
 <div class="form-group form-group-lg" wrap="input" schema="<?php echo $schema->id;?>" schema-type="<?php echo $schema->type;?>">
-    <label class="sr-only">
+    <label>
         <?php echo $schema->title;?>
     </label>
     <input ng-model="data.<?php echo $schema->id;?>" title="<?php echo $schema->title;?>" class="form-control input-lg" type="text" />
 </div>
 <?php } else if ($schema->type==='member') { ?>
 <div class="form-group form-group-lg" wrap="input" schema="<?php echo $schema->id;?>" schema-type="<?php echo $schema->type;?>">
-    <label class="sr-only">
+    <label>
         <?php echo $schema->title;?>
     </label>
     <input ng-model="data.<?php echo $schema->id;?>" title="<?php echo $schema->title;?>" class="form-control input-lg" type="text" ng-init="data.member.schema_id=<?php echo $schema->schema_id;?>" />
 </div>
 <?php } else if ($schema->type==='longtext') { ?>
 <div class="form-group form-group-lg" wrap="input" schema="<?php echo $schema->id;?>" schema-type="<?php echo $schema->type;?>">
-    <label class="sr-only">
+    <label>
         <?php echo $schema->title;?>
     </label>
     <textarea style="height:auto;" ng-model="data.<?php echo $schema->id;?>" title="<?php echo $schema->title;?>" class="form-control input-lg" rows="3"></textarea>
@@ -40,4 +40,6 @@ $schema = $def->schema;
 <?php } ?>
 <?php } ?>
 <!-- end: generate by schema -->
-<div id="btnSubmit" class="form-group" wrap="button"><button class="btn btn-primary btn-block btn-lg" ng-click="submit($event,'_autoForward')"><span>签到</span></button></div>
+<div id="btnSubmit" class="form-group" wrap="button">
+    <button class="btn btn-primary btn-block btn-lg" ng-click="submit($event,'_autoForward')"><span>签到</span></button>
+</div>
